# shushlang

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
inc/: command_consts.inc  commands.inc  generate.py  generate_commands_inc.py
include/: shushlang.hpp
src/: generate_commands_inc.py  shushlang.cpp
test/: factorial.shushasm  sqr_eq.shushasm  test.cpp
